# polymorphism-is-rotation

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PAPER_NUMBERS.md  REPLICATION.md
paper/: README.md  main.bbl  main.tex  refs.bib
replicate/: __init__.py  __main__.py  _paths.py  fetch.py  figures.py  run_fast.py  run_full.py  verify.py
scripts/: build_github_release.py  upload_artifacts_to_hf.py
src/polymorphism/: __init__.py  artifact_builder.py  final_report.py  model.py  rmsnorm_fold.py  run_all.py  run_bars.py  run_lenses.py  run_post_training.py  symmetry_search.py  task.py  train.py  train_all.py  write_logs.py
src/polymorphism/analysis/: lens1_weights.py  lens2_saes.py  lens3_causal.py  lens4_polyhedral.py  lens5_constructive.py  lens5_rasp.py
src/polymorphism/experiments/bar_p_joint/: joint_align.py
src/polymorphism/experiments/cross_checkpoint/: cross_ckpt.py
src/polymorphism/experiments/cross_seed/: aggregate.py  exp1a_reconstruction.py  exp1b_firing_overlap.py  exp1c_feature_patching.py  exp1d_rotation_audit.py  exp2_steering.py  utils.py
src/polymorphism/experiments/independent_init/: analyze_indep.py
src/polymorphism/experiments/scale/: common.py  download_pythia.py  eigenvalue_spectrum.py  exp5_ig_pythia_replication.py  firing_pattern.py  ig_pythia.py  pythia_panel_c_fast.py  pythia_rotation.py
src/polymorphism/verification/: bar_behavioral.py  bar_causal.py  bar_parametric.py  bar_predictive.py  decoy.py  universality.py
tests/: test_analysis_lenses.py  test_joint_align.py  test_model.py  test_replication_smoke.py  test_rmsnorm_fold.py  test_scale_common.py  test_symmetry_search.py  test_task.py
