[project]
name = "polymorphism-is-rotation"
version = "1.0.0"
description = "Replication code for 'Polymorphism Is Rotation' (McCann, 2026)."
authors = [{ name = "Jordan F. McCann", email = "jordanfmccann@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
keywords = [
    "mechanistic-interpretability",
    "sparse-autoencoders",
    "transformers",
    "universality",
    "rotation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2,<3.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.11,<2.0",
    "matplotlib>=3.7,<4.0",
    "huggingface-hub>=0.23,<2.0",
    "transformers>=4.40,<6.0",
    "datasets>=2.18,<5.0",
    "tqdm>=4.65,<5.0",
    "safetensors>=0.4,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
]

[project.scripts]
polymorphism-replicate = "replicate.__main__:main"

[project.urls]
"Paper" = "https://arxiv.org/abs/2605.24577"
"Source" = "https://github.com/JordanMcCann/polymorphism-is-rotation"
"Artifacts" = "https://huggingface.co/datasets/Jordanfmccann/polymorphism-is-rotation"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymorphism", "replicate"]

[tool.hatch.build.targets.sdist]
include = [
    "src/polymorphism",
    "replicate",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
markers = [
    "slow: tests that take >30s (deselect with '-m \"not slow\"')",
    "gpu: tests requiring CUDA (deselect with '-m \"not gpu\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# We inherit a research codebase that mixes mathematical naming (W_E, dW, etc.)
# and a few one-line idioms. The ignores below are stylistic-only; real bugs
# (F-series, B023, etc.) are still flagged.
ignore = [
    "E501",  # line too long (paper-style long lines OK in research code)
    "E702",  # multiple statements on one line (semicolon) -- pervasive in shorthand
    "E741",  # ambiguous variable names (`l`, `I`) -- legit for math
    "N803",  # argument name should be lowercase -- need W_E etc.
    "N806",  # variable name should be lowercase -- need W_E etc.
    "N812",  # lowercase imported as non-lowercase -- F.relu vs functional
    "N802",  # function name should be lowercase -- a few math conventions
    "B007",  # unused loop control variable -- often intentional in research code
    "B023",  # function uses loop variable -- intentional closures over loop vars
    "B905",  # zip without strict=  -- noisy across legacy
    "F841",  # unused variable (often kept for debugging visibility)
    "UP",    # py-upgrade -- not interested in style modernization here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N", "F"]
